--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,27 @@
 
     <groupId>net.polarizedions.polarizedbot</groupId>
     <artifactId>polarizedbot</artifactId>
-    <version>1.0.0-a1</version>
+    <version>2.0.0-a1</version>
 
     <properties>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
+
+        <!-- Buildinfo -->
+        <timestamp>${maven.build.timestamp}</timestamp>
+        <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ssX</maven.build.timestamp.format>
     </properties>
+
+
+    <build>
+        <resources>
+            <!-- Buildinfo -->
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+    </build>
 
     <repositories>
         <!-- Command Parsing / Brigadier -->
