--- a/pom.xml
+++ b/pom.xml
@@ -83,5 +83,12 @@
             <artifactId>log4j-slf4j-impl</artifactId>
             <version>2.11.2</version>
         </dependency>
+
+        <!-- Annotations processing -->
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.9.11</version>
+        </dependency>
     </dependencies>
 </project>
